# weather_plus

./: .env.example  .gitignore  Dockerfile  README.md  config.py  pyproject.toml
api/: schemas.py  server.py
clients/: openmeteo_compatible.py
engine/: blend.py  calibration.py  feature_store.py  tiles.py
models/: README.md
scripts/: example_end_to_end.sh  fetch_era5_land.py  fetch_era5_single_levels.py  fetch_openmeteo_hindcast.py  global_fetch_and_train.sh  launch_parallel.sh  make_training_pairs.py  make_training_pairs_tile.py  parallel_fetch_tiles.py  train.py  train_monthly.sh  train_psfc.py  train_t2m.py  train_td2m.py  train_tiles.py  train_tp.py  train_wind_direction_100m.py  train_wind_speed_100m.py  verify_vs_openmeteo.py
scripts/utils/: om_request.py  rate_limiter.py  s3_utils.py
src/weather_plus/: config.py
src/weather_plus/api/: server.py
src/weather_plus/engine/: baseline.py  downscale.py  feature_store.py  features.py  model_cache.py  utils.py
src/weather_plus/routers/: forecast.py
